SET(QT_MODELTEST_HDRS
  modeltest.h
)

SET(QT_MODELTEST_SRCS
  modeltest.cpp
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${Qt5Core_INCLUDE_DIRS}
  ${Qt5Test_INCLUDE_DIRS}
)

ADD_LIBRARY(qt_modeltest SHARED ${QT_MODELTEST_SRCS})

SET_TARGET_PROPERTIES(qt_modeltest PROPERTIES AUTOMOC TRUE)

TARGET_LINK_LIBRARIES(qt_modeltest
  ${Qt5Core_LIBRARIES}
  ${Qt5Test_LIBRARIES}
)

